name:                hasnip
version:             0.1.0.0
synopsis:            A network-compatable rewrite of the Ace of Spades 0.* clients in Haskell
-- description:
homepage:            BuildAndShoot.com
license:             GPL-3
license-file:        LICENSE
author:              John Ericson
maintainer:          Ericson2314@Yahoo.com
copyright:           2013
category:            Game
build-type:          Simple
cabal-version:       >=1.10

Test-suite hasnip-test
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    test
  build-depends:     base            >= 4
    ,                hasnip

executable hasnip
  default-language:  Haskell2010
  ghc-options:       -Wall

  main-is:           Main.hs

  other-modules:     HaSnip.ClientGameMain
    ,                HaSnip.Misc
    ,                HaSnip.ServerList
    ,                HaSnip.ServerList.BnSURLs



  hs-source-dirs:    src
  build-depends:     base            >= 4
    ,                bytestring      >= 0.10
    ,                text            >= 0.11
    ,                network         >= 2.4
    ,                aeson           >= 0.6
    ,                typesafe-endian == 0.1.*
    ,                henet           == 1.3.8.*
